fix: jd/css/jd_form.css: submit button not horizonally aligned to form items

--- a/jd/css/jd_form.css
+++ b/jd/css/jd_form.css
@@ -29,7 +29,7 @@ input[type=submit] {
 	border: none;
 	color: #fff;
 	height: 50px;
-	width: 400px;
+	width: 425px;
 }
 
 .li01 {
